@@ -18,6 +18,10 @@ package com.dremio.common.utils;
 import static com.google.common.base.Preconditions.checkNotNull;
 
 import com.dremio.common.exceptions.UserException;
+import com.dremio.common.nodes.EndpointHelper;
+import com.dremio.common.utils.protos.QueryIdHelper;
+import com.dremio.exec.proto.CoordinationProtos;
+import com.dremio.exec.proto.UserBitShared;
 import com.dremio.io.file.Path;
 import com.github.slugify.Slugify;
 import com.google.common.base.Joiner;
@@ -25,8 +29,8 @@ import com.google.common.base.Preconditions;
 import com.google.common.base.Splitter;
 import com.google.common.collect.Lists;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
@@ -207,18 +211,14 @@ public class PathUtils {
    * @return encoded string
    */
   public static String encodeURIComponent(String component) {
-    try {
-      final String encodedComponent = URLEncoder.encode(component, "UTF-8");
-      final String pattern1Str = pattern1.matcher(encodedComponent).replaceAll("(");
-      final String pattern2Str = pattern2.matcher(pattern1Str).replaceAll(")");
-      final String pattern3Str = pattern3.matcher(pattern2Str).replaceAll("%20");
-      final String pattern4Str = pattern4.matcher(pattern3Str).replaceAll("'");
-      final String pattern5Str = pattern5.matcher(pattern4Str).replaceAll("!");
-      final String pattern6Str = pattern6.matcher(pattern5Str).replaceAll("~");
-      return pattern6Str;
-    } catch (UnsupportedEncodingException e) {
-      throw new UnsupportedOperationException(e);
-    }
+    final String encodedComponent = URLEncoder.encode(component, StandardCharsets.UTF_8);
+    final String pattern1Str = pattern1.matcher(encodedComponent).replaceAll("(");
+    final String pattern2Str = pattern2.matcher(pattern1Str).replaceAll(")");
+    final String pattern3Str = pattern3.matcher(pattern2Str).replaceAll("%20");
+    final String pattern4Str = pattern4.matcher(pattern3Str).replaceAll("'");
+    final String pattern5Str = pattern5.matcher(pattern4Str).replaceAll("!");
+    final String pattern6Str = pattern6.matcher(pattern5Str).replaceAll("~");
+    return pattern6Str;
   }
 
   /**
@@ -391,5 +391,53 @@ public class PathUtils {
     final Map<String, String> map =
         Splitter.on('&').withKeyValueSeparator("=").split(checkNotNull(queryParams));
     return map.containsKey(paramName) ? conversionFromString.apply(map.get(paramName)) : defaultVal;
+  }
+
+  public static class ProfilesPath {
+    private static final String SEPARATOR = "/";
+    private static final String INTERMEDIATE = "intermediate";
+    private static final String FINAL = "final";
+
+    private static final String PLANNING = "planning";
+    private static final String TAIL = "tail";
+    private static final String EXECUTOR = "executor";
+    private static final String FULL = "Full";
+    public static final String FINAL_EXECUTOR_PROFILE_SUFFIX = "_final";
+
+    public static String buildProfilePrefix(UserBitShared.QueryId queryId) {
+      return QueryIdHelper.getQueryId(queryId) + SEPARATOR;
+    }
+
+    public static String buildIntermediatePrefix(UserBitShared.QueryId queryId) {
+      return buildProfilePrefix(queryId) + INTERMEDIATE + SEPARATOR;
+    }
+
+    public static String buildPlanningProfilePath(UserBitShared.QueryId queryId) {
+      return buildIntermediatePrefix(queryId) + PLANNING;
+    }
+
+    public static String buildTailProfilePath(UserBitShared.QueryId queryId) {
+      return buildIntermediatePrefix(queryId) + TAIL;
+    }
+
+    public static String buildExecutorProfilePrefix(UserBitShared.QueryId queryId) {
+      return buildIntermediatePrefix(queryId) + EXECUTOR + SEPARATOR;
+    }
+
+    public static String buildExecutorProfilePath(
+        UserBitShared.QueryId queryId, CoordinationProtos.NodeEndpoint endpoint, boolean isFinal) {
+      String suffix = isFinal ? FINAL_EXECUTOR_PROFILE_SUFFIX : "";
+      return buildExecutorProfilePrefix(queryId)
+          + EndpointHelper.getMinimalString(endpoint)
+          + suffix;
+    }
+
+    public static String buildFullProfilePath(UserBitShared.QueryId queryId) {
+      return buildFinalPrefix(queryId) + FULL;
+    }
+
+    private static String buildFinalPrefix(UserBitShared.QueryId queryId) {
+      return buildProfilePrefix(queryId) + FINAL + SEPARATOR;
+    }
   }
 }
